# 2025-1-WE-MEET-ROS2-serving-robot-project

./: README.md  latency_log.csv
install/: local_setup.sh  setup.sh
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node  read_write_node.py
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/odom_tools/lib/odom_tools/: latency_measurement  move_turtlebot  mqtt_receiver  object_detection  temp_kiosk
install/odom_tools/share/odom_tools/: package.sh
install/turtlebot3/share/turtlebot3/: local_setup.bash  local_setup.dsv  local_setup.sh  package.sh  (+2 more)
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/odom_tools/: package.xml  setup.py
src/odom_tools/odom_tools/: tempkiosk.py
(+427 files in other folders)
