<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom_tools</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dol08222k@todo.todo">dol08222k</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS 2 Python 및 메시지 의존성 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- PyQt5 의존성 추가 -->
  <exec_depend>python3-pyqt5</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
